--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+add_subdirectory(qwt)
+
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
@@ -42,7 +44,13 @@ else()
     endif()
 endif()
 
-target_link_libraries(qwt_cmake_error PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_include_directories(qwt_cmake_error
+    PUBLIC
+    ./qwt/src/
+    ${PROJECT_BINARY_DIR}/
+)
+
+target_link_libraries(qwt_cmake_error PRIVATE Qt${QT_VERSION_MAJOR}::Widgets qwt)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
